[package]
name = "zotero-csv-merge"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = {version = "0.12.7", features = ["json"]}
serde = {version = "1.0.210", features=["derive"]}
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-macros = "2.4.0"
